app/css/sponsors.css
.sponsor-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-bottom: 2rem;
  gap: 5rem;

  .sponsor-img {
    aspect-ratio: unset;
    width: 800px;
    border: solid 5px #bf46667f;
    border-radius: 25px;

    animation: sponsor-img 0.8s cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s both;
  }

  .past-sponsors {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    gap: 2rem;

    animation: past-sponsors 0.8s cubic-bezier(0.39, 0.575, 0.565, 1) 0.24s both;
  }

  .past-sponsor-img {
    aspect-ratio: 3/4;
    width: 15%;
    object-fit: contain;
  }
}

.sponsor-text {
  font-family: "Corbert", sans-serif;
  text-align: center;
  padding: 0 16vw;
  color: #532d53;
  font-weight: bold;

  animation: sponsor-text 0.8s cubic-bezier(0.39, 0.575, 0.565, 1) 0.15s both;
}

.riseup {
  animation: riseup 0.8s cubic-bezier(0.39, 0.575, 0.565, 1) 0.28s both;
}

.button-container {
  /* all: unset; */
  background: #c95d79;
  border-radius: 20px;

  font-family: "Corbert", sans-serif;
  font-size: 20px;
  font-weight: bold;
  color: #fbe9f5;
  padding: 0 1rem;

  transform: scale(1);
  transition: transform 0.2s ease-in-out;
}

.button-container:hover {
  cursor: pointer;
  transform: scale(1.02);
  transition: transform 0.2s ease-in-out;
}

.button-container:active {
  transform: scale(98%);
  background-color: #b34c67;
  transition: scale 0.2s ease-in-out;
}

@keyframes sponsor-text {
  0% {
    transform: translateZ(-700px) translateY(50px);
    opacity: 0;
  }
  40% {
    opacity: 0.6;
  }
  100% {
    transform: translateZ(0) translateY(0);
    opacity: 1;
  }
}

@keyframes sponsor-img {
  0% {
    transform: translateZ(-700px) translateY(50px);
    opacity: 0;
  }
  40% {
    opacity: 0.6;
  }
  100% {
    transform: translateZ(0) translateY(0);
    opacity: 1;
  }
}

@keyframes past-sponsors {
  0% {
    transform: translateZ(-700px) translateY(50px);
    opacity: 0;
  }
  40% {
    opacity: 0.6;
  }
  100% {
    transform: translateZ(0) translateY(0);
    opacity: 1;
  }
}

@keyframes riseup {
  0% {
    transform: translateZ(-700px) translateY(50px);
    opacity: 0;
  }
  40% {
    opacity: 0.6;
  }
  100% {
    transform: translateZ(0) translateY(0);
    opacity: 1;
  }
}

